basic dagger working.