@@ -3,16 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
-    <artifactId>RoboLift</artifactId>
+    <groupId>com.ndipatri</groupId>
+    <artifactId>arduinoButton</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>apk</packaging>
     <name>RoboLift</name>
     <description>Who is the replicant here?</description>
-
-    <properties>
-        <maven.min-version>3.0.4</maven.min-version>
-    </properties>
 
     <dependencies>
 
@@ -20,6 +16,13 @@
             <groupId>com.squareup.dagger</groupId>
             <artifactId>dagger</artifactId>
             <version>1.2.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.dagger</groupId>
+            <artifactId>dagger-compiler</artifactId>
+            <version>1.2.1</version>
+            <optional>true</optional>
         </dependency>
 
         <!--main-->
@@ -65,11 +68,11 @@
             <version>1.4.0</version>
         </dependency>
 
-		<dependency>
-			<groupId>com.squareup</groupId>
-			<artifactId>otto</artifactId>
-			<version>1.3.2</version>
-		</dependency>
+        <dependency>
+            <groupId>com.squareup</groupId>
+            <artifactId>otto</artifactId>
+            <version>1.3.2</version>
+        </dependency>
 
         <dependency>
             <groupId>com.j256.ormlite</groupId>
@@ -82,83 +85,36 @@
     <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
-            <!-- the android build lifecycle -->
             <plugin>
-                <!-- See http://code.google.com/p/maven-android-plugin/ -->
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                 <artifactId>android-maven-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
                     <sdk>
-                        <platform>17</platform>
+                        <!-- platform or api level (api level 4 = platform 1.6)-->
+                        <platform>18</platform>
                     </sdk>
-                    <!-- classifier>${env}</classifier -->
-                    <resourceDirectory>../${project.build.directory}/filtered-res</resourceDirectory>
-                    <androidManifestFile>../${project.build.directory}/filtered-manifest/AndroidManifest.xml</androidManifestFile>
-                    <proguard>
-                        <skip>true</skip>
-                    </proguard>
+                    <undeployBeforeDeploy>true</undeployBeforeDeploy>
                 </configuration>
                 <extensions>true</extensions>
-            </plugin>
-
-            <!-- enforce a minimum maven version, so that all of the features that we use will work -->
-            <plugin>
-                <artifactId>maven-enforcer-plugin</artifactId>
-                <version>1.2</version>
-                <executions>
-                    <execution>
-                        <id>enforce-default</id>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <requireMavenVersion>
-                                    <version>[${maven.min-version},)</version>
-                                </requireMavenVersion>
-                            </rules>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>enforce-clean</id>
-                        <phase>pre-clean</phase>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <requireMavenVersion>
-                                    <version>[${maven.min-version},)</version>
-                                </requireMavenVersion>
-                            </rules>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>enforce-site</id>
-                        <phase>pre-site</phase>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <requireMavenVersion>
-                                    <version>[${maven.min-version},)</version>
-                                </requireMavenVersion>
-                            </rules>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.6</version>
                 <configuration>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
                     <excludes>
                         <exclude>**/Test*.java</exclude>
                     </excludes>
+                    <argLine>-Xmx1024m</argLine>
                 </configuration>
             </plugin>
         </plugins>
